# BowlingScore

./: CMakeLists.txt  main.cpp
src/: BowlingScore.cpp  CMakeLists.txt
src/include/: BowlingScore.h  BowlingScore.tpp
tests/: BowlingScoreTest.cpp  CMakeLists.txt
